# hipodromo_python

./: DEBUGGING_GUIDE.md  Hipodromo.py  LICENSE  README.md  config.py  game.py  i18n.py  pyproject.toml  pytest.ini  utils.py
packaging/aur/: PKGBUILD
packaging/homebrew/: hipodromo.rb
scripts/: install.sh
tests/: README.md  __init__.py  conftest.py  run_tests.py  simple_test_runner.py  test_config.py  test_debugging.py  test_game.py  test_i18n.py  test_integration.py  test_setup.py  test_utils.py
